Initial thrall image builds
sbt universal, then straight to sbt docker may be the correct path now.

Play framework assembly docs do not help with Caused by: java.lang.ClassNotFoundException: play.core.server.ProdServerStart

Attempt to build thrall as a fat jar using assembly.

Reminder of what Thrall does.